--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -56,3 +56,76 @@ select {
 .invisible {
   visibility: hidden;
 }
+.size {
+  width: 800px; /* Let the container control the width */
+  height: 800px; /* Let the container control the height */
+  z-index: -1;
+}
+@media (max-width: 1200px) {
+  .size {
+    width: 700px;
+    height: 700px;
+  }
+}
+@media (max-width: 960px) {
+  .size {
+    width: 600px;
+    height: 600px;
+  }
+}
+@media (max-width: 850px) {
+  .size {
+    width: 500px;
+    height: 500px;
+  }
+}
+@media (max-width: 700px) {
+  .size {
+    width: 400px;
+    height: 400px;
+  }
+}
+@media (max-width: 450px) {
+  .size {
+    width: 300px;
+    height: 300px;
+    transform: translate(-40px);
+  }
+}
+.size1 {
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+  position: relative;
+  transition: all 0.3s ease;
+}
+@media (min-width: 400px) {
+  .size1 {
+    width: 300px;
+    height: 300px;
+    transform: translate(50px);
+  }
+}
+@media (min-width: 600px) {
+  .size1 {
+    width: 400px;
+    height: 400px;
+    transform: translate(50px);
+  }
+}
+
+@media (min-width: 900px) {
+  .size1 {
+    width: 450px;
+    height: 450px;
+    transform: translate(200px);
+  }
+}
+
+@media (min-width: 1200px) {
+  .size1 {
+    width: 500px;
+    height: 500px;
+    transform: translate(200px);
+  }
+}
